# EvalGIM-

./: .gitignore  failed_prompts.txt  fastvit.py  requirements.txt
EvalGIM/: .gitignore  README.md  pyproject.toml
EvalGIM/evaluation_library/: evaluate.py  evaluator.py  generate.py  launcher_with_accelerate.py  main.py
EvalGIM/evaluation_library/data/: data_classes.py  dataset_evaluation.py  imagenet_classes.py  paths.yaml  real_datasets.py  real_datasets_balanced.py  real_datasets_promptonly.py
EvalGIM/evaluation_library/metrics/: DSG.py  PRDC.py  customCLIPScore.py  customFID.py  customFIDTorchEval.py  groupedMarginalMetric.py  vqascore.py
EvalGIM/evaluation_library/visualizations/: datasets.py  groups.py  pareto_fronts.py  ranking.py
EvalGIM/projects/evaluation_exercises/data/: exercise_groups.csv  exercise_prompttypes.csv  exercise_rankingrobustness.csv  exercise_tradeoffs.csv
EvalGIM/projects/onboarding/: results.csv
EvalGIM/tests/: test_datasets.py
configs/: gen_prompts.py  paths.yaml
data/coco/: .gitignore  coco_5k_prompts.txt
data/coco2017/: coco_5k_prompts.txt
scripts/: download_coco.sh  generate_artifyai_remaining.py  generate_images.py  generate_openjourney_remaining.py  generate_sd15_remaining.py  generate_sd21_remaining.py  prepare_coco_5k.sh  testgen.py
